k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlists-deployment
  labels:
    app: wishlists-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: wishlists-app
  template:
    metadata:
      labels:
        app: wishlists-app
    spec:
      restartPolicy: Always
      containers:
      - image: k3d-registry.local:32000/wishlists:1.0
        imagePullPolicy: IfNotPresent
        name: wishlists-app
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: "0.25"
            memory: "64Mi"
          requests:
            cpu: "0.10"
            memory: "32Mi"
