k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlists-service
spec:
  type: ClusterIP
  selector:
    app: wishlists-app
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
